--- a/user_ssh_toolbox/roles/ssh_config/tasks/main.yml
+++ b/user_ssh_toolbox/roles/ssh_config/tasks/main.yml
@@ -1,2 +1,24 @@
 ---
-# tasks file for ssh_config
+- name: Ensure SSH configuration settings
+  ansible.builtin.replace:
+    path: /etc/ssh/sshd_config
+    regexp: '{{ item.option }}'
+    replace: '{{ item.option }} {{ item.value }}'
+    # state: present
+    # backup: yes
+  loop:
+    - { option: 'PasswordAuthentication', value: 'yes' }
+    - { option: 'PermitEmptyPasswords', value: 'no' }
+    - { option: 'PermitRootLogin', value: 'no' }
+  notify: Restart SSH service
+
+- name: Ensure SSH service is running
+  ansible.builtin.systemd:
+    name: sshd
+    enabled: yes
+    state: started
+  handlers:
+    - name: Restart SSH service
+      ansible.builtin.systemd:
+        name: sshd
+        state: restarted
